update dependencies and plugins for java 11